--- a/D-TECT/src/main/resources/templates/expert/expert_mainpage.html
+++ b/D-TECT/src/main/resources/templates/expert/expert_mainpage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8" />
@@ -7,7 +7,7 @@
     <title>D-tect | 전문가 메인</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./css/expert_mainpage.css" />
+    <link rel="stylesheet" th:href="@{/css/expert_mainpage.css}" />
 </head>
 
 <body class="expert-main">
@@ -17,14 +17,14 @@
     <!-- 상단바 -->
     <header class="topbar">
         <div class="left">
-            <img src="./images/logo.png" class="logo" alt="D-tect" />
+            <img th:src="@{/images/logo.png}" class="logo" alt="D-tect" />
             <h1 class="title">전문가 대시보드</h1>
         </div>
         <div class="right">
             <div class="role-badge">변호사</div>
             <!-- ✅ 마이페이지 아이콘 버튼 -->
             <a id="mypageBtn" class="icon-link" href="/expert_mypage.html" aria-label="전문가 마이페이지로 이동">
-                <img src="./images/mypage.png" alt="" class="avatar-img" />
+                <img th:src="@{/images/mypage.png}" alt="" class="avatar-img" />
             </a>
         </div>
     </header>
@@ -77,7 +77,7 @@
     </main>
 
     <!-- JS -->
-    <script defer src="./js/expert_mainpage.js"></script>
+    <script defer th:src="@{/js/expert_mainpage.js}"></script>
 </body>
 
 </html>
