--- a/D-TECT/src/main/resources/templates/user/inquiry_checkout.html
+++ b/D-TECT/src/main/resources/templates/user/inquiry_checkout.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>D-tect | 변호사 문의 · 결제</title>
 
-    <link rel="stylesheet" href="./css/inquiry_checkout.css" />
+    <link rel="stylesheet" th:href="@{/css/inquiry_checkout.css}" />
     <!-- Toss Payments JS SDK -->
     <script src="https://js.tosspayments.com/v1"></script>
 </head>
@@ -61,7 +61,7 @@
         </section>
     </main>
 
-    <script defer src="./js/inquiry_checkout.js"></script>
+    <script defer th:src="@{/js/inquiry_checkout.js}"></script>
 </body>
 
 </html>
