update : picture.jfif = start img original, start.html using picture.jfif

--- a/D-TECT/src/main/resources/templates/public/start.html
+++ b/D-TECT/src/main/resources/templates/public/start.html
@@ -19,7 +19,7 @@
 
     <!-- 사진 + 오버레이 문구 -->
     <div class="photo-wrap">
-        <img class="picture" src="./images/picture.png" alt="희망을 상징하는 이미지" />
+        <img class="picture" src="./images/picture.jfif" alt="희망을 상징하는 이미지" />
         <strong class="overlay-quote">당신의 마음은 여전히 빛나고 있어요</strong>
     </div>
 </main>
