feat : mypage 연결

--- a/D-TECT/src/main/resources/templates/user/analysis.html
+++ b/D-TECT/src/main/resources/templates/user/analysis.html
@@ -19,7 +19,9 @@
             <button class="icon-btn" id="btnAI" aria-label="챗봇 열기">
                 <img th:src="@{/images/AI.png}" alt="AI" />
             </button>
-            <a class="icon-btn" href="./mypage.html" aria-label="마이페이지로 이동">
+            <a class="icon-btn"
+               th:href="@{/mypage}"
+               aria-label="마이페이지로 이동">
                 <img th:src="@{/images/mypage.png}" alt="마이페이지" />
             </a>
         </div>
