--- a/D-TECT/src/main/resources/templates/admin/admin_page.html
+++ b/D-TECT/src/main/resources/templates/admin/admin_page.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>D-tect | 관리자 페이지</title>
-    <link rel="stylesheet" th:href="@{/css/admin_page.css}" />
+    <link rel="stylesheet" th:href="@{/css/admin/admin_page.css}" />
 </head>
 <body>
 <header class="topbar">
