fix : 간편 로그인 api연결, 스프링 시큐리티 페이지 전체 오픈

--- a/D-TECT/src/main/resources/templates/chatboard/chat_board.html
+++ b/D-TECT/src/main/resources/templates/chatboard/chat_board.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>D-tect | 1:1 채팅 게시판</title>
-    <link rel="stylesheet" th:href="@{/css/chat_board.css}" />
+    <link rel="stylesheet" th:href="@{/css/chatboard/chat_board.css}" />
 </head>
 
 <body class="chat-page">
@@ -38,7 +38,7 @@
         </aside>
     </main>
 
-    <script defer th:src="@{/js/chat_board.js}"></script>
+    <script defer th:src="@{/js/chatboard/chat_board.js}"></script>
 </body>
 
 </html>
