--- a/D-TECT/src/main/resources/templates/expert/expert_terms.html
+++ b/D-TECT/src/main/resources/templates/expert/expert_terms.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>D-tect | 전문가 약관 동의</title>
 <link rel="stylesheet" th:href="@{/css/expert/expert_terms.css}" />
-<meta th:name="_csrf" th:content="${_csrf.token}" />
-<meta th:name="_csrf_header" th:content="${_csrf.headerName}" />
+<!-- <meta th:name="_csrf" th:content="${_csrf.token}" />
+<meta th:name="_csrf_header" th:content="${_csrf.headerName}" /> -->
 <body class="terms-page">
 	<!-- 상단 -->
 	<div class="brand-strip"></div>
