--- a/D-TECT/src/main/resources/templates/user/lawyers_select.html
+++ b/D-TECT/src/main/resources/templates/user/lawyers_select.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>D-tect | 변호사 선택</title>
-    <link rel="stylesheet" th:href="@{/css/lawyers_select.css}" />
+    <link rel="stylesheet" th:href="@{/css/user/lawyers_select.css}" />
 </head>
 
 <body class="lawyers-page" th:attr="data-user-id=${userId}">
@@ -59,6 +59,6 @@
     <input type="file"   name="attachment" />
 </form>
 
-<script defer th:src="@{/js/lawyers_select.js}"></script>
+<script defer th:src="@{/js/user/lawyers_select.js}"></script>
 </body>
 </html>
