--- a/D-TECT/src/main/resources/templates/user/user_reservation.html
+++ b/D-TECT/src/main/resources/templates/user/user_reservation.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>D-tect | 일정 예약</title>
-    <link rel="stylesheet" th:href="@{/css/user_reservation.css}" />
+    <link rel="stylesheet" th:href="@{/css/user/user_reservation.css}" />
 </head>
 
 <body class="reservation-page">
@@ -50,7 +50,7 @@
         </div>
     </footer>
 
-    <script th:src="@{/js/user_reservation.js}"></script>
+    <script th:src="@{/js/user/user_reservation.js}"></script>
 </body>
 
 </html>
