--- a/D-TECT/src/main/resources/templates/user/user_terms.html
+++ b/D-TECT/src/main/resources/templates/user/user_terms.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>D-tect | 일반회원 약관</title>
 <link rel="stylesheet" th:href="@{/css/user/user_terms.css}" />
-<meta th:name="_csrf" th:content="${_csrf.token}" />
-<meta th:name="_csrf_header" th:content="${_csrf.headerName}" />
+<!--  <meta th:name="_csrf" th:content="${_csrf.token}" />
+<meta th:name="_csrf_header" th:content="${_csrf.headerName}" /> -->
 
 </head>
 
