--- a/D-TECT/src/main/resources/templates/expert/expert_signup.html
+++ b/D-TECT/src/main/resources/templates/expert/expert_signup.html
@@ -7,8 +7,8 @@
 <title>D-tect | 전문가 회원가입</title>
 <!-- CSS -->
 <link rel="stylesheet" th:href="@{/css/expert/expert_signup.css}" />
-<meta th:name="_csrf" th:content="${_csrf.token}" />
-<meta th:name="_csrf_header" th:content="${_csrf.headerName}" />
+<!--  <meta th:name="_csrf" th:content="${_csrf.token}" />
+<meta th:name="_csrf_header" th:content="${_csrf.headerName}" /> -->
 
 </head>
 
